# emma

./: .gitignore  CMakeLists.txt  Makefile  api.c  emma.h  emma_helper.c  emma_helper.h  memtable.c  memtable.h
test/: Makefile  main.c
win/: emma.sln  emma.vcxproj  emma.vcxproj.filters
win/emma_test/: emma_test.vcxproj  emma_test.vcxproj.filters
